--- a/src/index.html
+++ b/src/index.html
@@ -15,5 +15,24 @@
     <script src="js/main.js" defer type="module"></script>
     <title>🚧 Izzy IT 🚧</title>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <h4 class="subtitle">Hey! You're early!</h4>
+      <h1 class="title">We are just getting ready</h1>
+      <div class="divider"></div>
+      <p class="introduction">
+        While our site is still on its way, we are fully operational as an IT
+        service provider in Surrey and Croydon. Need expert IT advice? We'd be
+        happy to give you a full IT consultation,
+        <b>competely free of charge</b>.
+      </p>
+      <p class="contact">
+        You can reach us via
+        <a href="mailto:hello@izzyit.co.uk">hello@izzyit.co.uk</a>
+      </p>
+    </main>
+    <footer>
+      <p class="copyright">© Izzy It Ltd 2021</p>
+    </footer>
+  </body>
 </html>
